# mIAPlatform

./: .env.example  .gitignore  01-INCEPTION.md  02-CONCEPTION.md  03-TERMS-GLOSSARY.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: gsd-file-manifest.json  settings.local.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.gemini/: gsd-file-manifest.json
.gemini/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.opencode/: gsd-file-manifest.json  opencode.json
.opencode/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.opencode/command/: gsd-add-backlog.md  gsd-add-phase.md  gsd-add-tests.md  gsd-add-todo.md  gsd-audit-milestone.md  gsd-audit-uat.md  (+49 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
00-SPECIFICATION/: 01-show-artifacts.md  AGENT.md
04-ARCHITECTURE/: 04-ARCHITECTURE.md
alembic/: env.py
scripts/: db_setup.sql
tests/: conftest.py  test_agent_crud.py  test_agent_schemas.py
(+457 files in other folders)
